/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -34,6 +34,7 @@ Concepts used:
 - Stabilizer: $G_x \definedas \theset{g\in G\suchthat g\cdot x = x} \leq G$
 - Orbit-Stabilizer: $G\cdot x \simeq G/G_x$.
 - $abc\in H \iff b\in a\inv H c\inv$
+- Set of orbits for $G\actson X$, notated $X/G$.
 
 ### a
 
@@ -59,17 +60,17 @@ Let $G$ act on its subgroups by conjugation,
 
 - The stabilizer of $H$ is $G_H = N_G(H)$.
 
-By orbit-stabilizer,
+- By orbit-stabilizer,
 \begin{align*}
 G\cdot H = [G: G_H] = [G: N_G(H)]
 .\end{align*}
 
-Since $\abs H = n$, and all of its conjugate also have order $n$.
-Using the fact that 
+- Since $\abs H = n$, and all of its conjugate also have order $n$.
+
+- Using the fact that 
 \begin{align*}
 H\leq N_G(H) \implies \abs{H} \leq \abs{N_G(H)} \implies {1\over \abs{N_G(H)}} \leq {1\over \abs{H}}
 ,\end{align*}
-
 we can *strictly* bound the size of the union of conjugates by ignoring the fact that they may intersect, and also overcounting their intersections at the identity:
 \begin{align*}
 \abs{\union_{g\in G}gHg\inv} 
@@ -82,6 +83,9 @@ we can *strictly* bound the size of the union of conjugates by ignoring the fact
 .\end{align*}
 
 ### c
+
+- Let $G\actson X$ transitively where $\abs{X} \geq 2$
+- An action is transitive iff there is only one orbit, so $\abs{X/G} = 1$.
 
 Noting that $G\actson S$ transitively iff there is only one orbit and $\abs {S/G} = 1$, by Burnside's lemma we have
 \begin{align*}
