/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -35,6 +35,8 @@ Concepts used:
 - Orbit-Stabilizer: $G\cdot x \simeq G/G_x$.
 - $abc\in H \iff b\in a\inv H c\inv$
 - Set of orbits for $G\actson X$, notated $X/G$.
+- Set of fixed points for $G\actson X$, notated $X^g$.
+- Burnside's Lemma: $\abs{X/G} \abs{G} = \sum_{g\in G} \abs{X^g}$ (number of orbits equals average number of fixed points).
 
 ### a
 
