/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -69,11 +69,11 @@ G\cdot H = [G: G_H] = [G: N_G(H)]
 
 - Since $\abs H = n$, and all of its conjugate also have order $n$.
 
-- Using the fact that 
+- Note that 
 \begin{align*}
 H\leq N_G(H) \implies \abs{H} \leq \abs{N_G(H)} \implies {1\over \abs{N_G(H)}} \leq {1\over \abs{H}}
 ,\end{align*}
-we can *strictly* bound the size of the union of conjugates by ignoring the fact that they may intersect, and also overcounting their intersections at the identity:
+- Now *strictly* bound the size of the union by overcounting their intersections at the identity:
 \begin{align*}
 \abs{\union_{g\in G}gHg\inv} 
 &< (\text{Number of Conjugates of } H) \cdot (\text{Size of each conjugate}) \\ 
@@ -88,18 +88,13 @@ we can *strictly* bound the size of the union of conjugates by ignoring the fact
 
 - Let $G\actson X$ transitively where $\abs{X} \geq 2$
 - An action is transitive iff there is only one orbit, so $\abs{X/G} = 1$.
-
-Noting that $G\actson S$ transitively iff there is only one orbit and $\abs {S/G} = 1$, by Burnside's lemma we have
+- Apply Burnside's Lemma
 \begin{align*}
-1 = \abs{S/G} = \frac{1}{\abs G} \sum_{g\in G} \abs{S^g} \implies \abs{G} = \sum_{g\in G} \abs{S^g}
+1 = \abs{X/G} = \frac{1}{\abs G} \sum_{g\in G} \abs{X^g} \implies \abs{G} = \sum_{g\in G} \abs{X^g}
 \end{align*}
-
-where $S^g = \theset{s\in S \suchthat g\actson s = s ~\forall g\in G}$.
-
-We can now note that $S^e = S$ and so $\abs{S^e} \geq 2$, not every other term in the sum can be greater than 1.
-So there is some $g$ such that $\abs{S^g} = 0$, so $g$ has no fixed points.
-
-$\qed$
+- Note that $X^e = X$, since the identity must fix every element, so $\abs{X^e} \geq 2$.
+- Not *every* other term in the sum can be greater than 1, otherwise the RHS is greater than the size of $G$
+- Thus we must have $\abs{X^g} = 0$ for some $g\in G$, i.e. $g$ has no fixed points in $X$.
 
 ## 3
 
