/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/0_Problem_Sessions.md’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -1,6 +1,6 @@
 # Fall 2018
 
-## 1 
+## 1 \label{problem:session_1_6_1_soln}
 
 ### a
 
@@ -36,7 +36,8 @@ Concepts used:
 - $abc\in H \iff b\in a\inv H c\inv$
 - Set of orbits for $G\actson X$, notated $X/G$.
 - Set of fixed points for $G\actson X$, notated $X^g$.
-- Burnside's Lemma: $\abs{X/G} \abs{G} = \sum_{g\in G} \abs{X^g}$ (number of orbits equals average number of fixed points).
+- Burnside's Lemma: $\abs{X/G} \cdot \abs{G} = \sum_{g\in G} \abs{X^g}$ 
+  - Number of orbits equals average number of fixed points.
 
 ### a
 
@@ -73,6 +74,7 @@ G\cdot H = [G: G_H] = [G: N_G(H)]
 \begin{align*}
 H\leq N_G(H) \implies \abs{H} \leq \abs{N_G(H)} \implies {1\over \abs{N_G(H)}} \leq {1\over \abs{H}}
 ,\end{align*}
+
 - Now *strictly* bound the size of the union by overcounting their intersections at the identity:
 \begin{align*}
 \abs{\union_{g\in G}gHg\inv} 
