/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -4,10 +4,11 @@
 
 ### a
 
-We know that every $p\dash$subgroup is contained in some Sylow $p\dash$subgroup, so $P \subseteq S_p^i$ for some $S_p^i \in \mathrm{Syl}_p(G)$.
+- Every $p\dash$subgroup is contained in some Sylow $p\dash$subgroup, so $P \subseteq S_p^i$ for some $S_p^i \in \mathrm{Syl}_p(G)$.
 
-Since $P$ is normal in $G$, we have $gPg\inv = P$ for all $g\in G$.
+- $P \normal G \iff gPg\inv = P$ for all $g\in G$.
 
+- Sylow $p\dash$subgroups are all conjugate, so
 If $S_p^j$ is any other Sylow $p\dash$subgroup, we have $gS_p^i g\inv = S_p^j$ for some $g\in G$.
 
 But then $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
