/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -8,10 +8,9 @@
 
 - $P \normal G \iff gPg\inv = P$ for all $g\in G$.
 
-- Sylow $p\dash$subgroups are all conjugate, so
-If $S_p^j$ is any other Sylow $p\dash$subgroup, we have $gS_p^i g\inv = S_p^j$ for some $g\in G$.
+- Sylow $p\dash$subgroups are all conjugate, so if $S_p^j$ is any other Sylow $p\dash$subgroup, $gS_p^i g\inv = S_p^j$ for *some* $g\in G$.
 
-But then $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
+- So $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
 
 ### b
 
