/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -10,7 +10,10 @@
 
 - Sylow $p\dash$subgroups are all conjugate, so if $S_p^j$ is any other Sylow $p\dash$subgroup, $gS_p^i g\inv = S_p^j$ for *some* $g\in G$.
 
-- So $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
+- Then 
+\begin{align*}
+P = gPg\inv \subseteq gS_p^i g\inv = S_p^j
+.\end{align*}
 
 ### b
 
