/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -2,13 +2,19 @@
 
 ## 1 \label{problem:session_1_6_1_soln}
 
+Concepts Used:
+
+- Sylow 2: All Sylow $p\dash$subgroups are conjugate.
+- $\abs{HK} = \abs{H} \abs{K} / \abs{H\intersect K}$.
+
 ### a
 
 - Every $p\dash$subgroup is contained in some Sylow $p\dash$subgroup, so $P \subseteq S_p^i$ for some $S_p^i \in \mathrm{Syl}_p(G)$.
 
 - $P \normal G \iff gPg\inv = P$ for all $g\in G$.
 
-- Sylow $p\dash$subgroups are all conjugate, so if $S_p^j$ is any other Sylow $p\dash$subgroup, $gS_p^i g\inv = S_p^j$ for *some* $g\in G$.
+- Let $S_p^j$ be any other Sylow $p\dash$subgroup, 
+- Since Sylow $p\dash$subgroups are all conjugate $gS_p^i g\inv = S_p^j$ for *some* $g\in G$.
 
 - Then 
 \begin{align*}
