/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -23,14 +23,15 @@ P = gPg\inv \subseteq gS_p^i g\inv = S_p^j
 
 ### b
 
-Suppose $P$ is not contained in $M$; then $M < MP$ is a proper subgroup, and by maximality of $M$, $MP = G$.
+- If $P$ is not contained in $M$, then $M < MP$ is a proper subgroup
+- By maximality of $M$, $MP = G$
 
 We can then write
 \begin{align*}
 G = MP
 &\implies \abs{G} = \frac{\abs{M} \abs{P}}{\abs{M\intersect P}} \\ \\
 &\implies \abs{M\intersect P} \abs{G} = \abs{M} \abs{P} \\ \\
-&(?) \implies \abs{G} \text{ divides } \abs{M} \abs{P} \\ \\
+&\implies \abs{G} \text{ divides } \abs{M} \abs{P} \\ \\
 &\implies \abs{G} / \abs{M} \text{ divides } \abs{P}
 .\end{align*}
 
