/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -24,6 +24,8 @@ P = gPg\inv \subseteq gS_p^i g\inv = S_p^j
 ### b
 
 - If $P$ is not contained in $M$, then $M < MP$ is a proper subgroup
+- If $G = P$, then the result follows immediately, so assume $P<G$ is proper.
+- This also rules out $M \subseteq P$ by maximality of $M$, so $P\intersect M = \theset{\id}$.
 - By maximality of $M$, $MP = G$
 
 We can then write
@@ -32,7 +34,7 @@ G = MP
 &\implies \abs{G} = \frac{\abs{M} \abs{P}}{\abs{M\intersect P}} \\ \\
 &\implies \abs{M\intersect P} \abs{G} = \abs{M} \abs{P} \\ \\
 &\implies \abs{G} \text{ divides } \abs{M} \abs{P} \\ \\
-&\implies \abs{G} / \abs{M} \text{ divides } \abs{P}
+&\implies \abs{G} / \abs{M} \text{ divides } \abs{P} = p^c
 .\end{align*}
 
 
