/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -33,7 +33,7 @@ We can then write
 G = MP
 &\implies \abs{G} = \frac{\abs{M} \abs{P}}{\abs{M\intersect P}} \\ \\
 &\implies \abs{M\intersect P} \abs{G} = \abs{M} \abs{P} \\ \\
-&\implies \abs{G} \text{ divides } \abs{M} \abs{P} \\ \\
+&\implies \abs{G} = \abs{M} \abs{P} \quad\quad\text{since }M\intersect P = \emptyset \\ \\
 &\implies \abs{G} / \abs{M} \text{ divides } \abs{P} = p^c
 .\end{align*}
 
