--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -24,17 +24,14 @@ P = gPg\inv \subseteq gS_p^i g\inv = S_p^j
 ### b
 
 - If $P$ is not contained in $M$, then $M < MP$ is a proper subgroup
-- If $G = P$, then the result follows immediately, so assume $P<G$ is proper.
-- This also rules out $M \subseteq P$ by maximality of $M$, so $P\intersect M = \theset{\id}$.
 - By maximality of $M$, $MP = G$
+- Note that $M\intersect P \leq P$ and thus $\abs{M\intersect P} = p^b$ for some $b\leq c$.
 
 We can then write
 \begin{align*}
 G = MP
-&\implies \abs{G} = \frac{\abs{M} \abs{P}}{\abs{M\intersect P}} \\ \\
-&\implies \abs{M\intersect P} \abs{G} = \abs{M} \abs{P} \\ \\
-&\implies \abs{G} = \abs{M} \abs{P} \quad\quad\text{since }M\intersect P = \emptyset \\ \\
-&\implies \abs{G} / \abs{M} \text{ divides } \abs{P} = p^c
+&\iff \abs{G} = \frac{\abs{M} \abs{P}}{\abs{M\intersect P}} \\ \\
+&\iff { \abs{G} \over \abs{M}} = {\abs{P}  \over \abs{M\intersect P}}
 .\end{align*}
 
 
