/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -31,9 +31,10 @@ We can then write
 \begin{align*}
 G = MP
 &\iff \abs{G} = \frac{\abs{M} \abs{P}}{\abs{M\intersect P}} \\ \\
-&\iff { \abs{G} \over \abs{M}} = {\abs{P}  \over \abs{M\intersect P}}
-.\end{align*}
+&\iff { \abs{G} \over \abs{M}} = {\abs{P}  \over \abs{M\intersect P}} = {p^c \over p^b} = p^{c-b}
+\end{align*}
 
+where $b\leq c \implies 0 \leq c-b \leq c$
 
 ## 2 \label{problem:session_1_6_2_soln}
 
