/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -6,6 +6,7 @@ Concepts Used:
 
 - Sylow 2: All Sylow $p\dash$subgroups are conjugate.
 - $\abs{HK} = \abs{H} \abs{K} / \abs{H\intersect K}$.
+- Lagrange's Theorem: $H\leq G \implies \abs{H} \divides \abs{G}$
 
 ### a
 
@@ -25,16 +26,16 @@ P = gPg\inv \subseteq gS_p^i g\inv = S_p^j
 
 - If $P$ is not contained in $M$, then $M < MP$ is a proper subgroup
 - By maximality of $M$, $MP = G$
-- Note that $M\intersect P \leq P$ and thus $\abs{M\intersect P} = p^b$ for some $b\leq c$.
+- Note that $M\intersect P \leq P$ and $\abs{P} = p^c$ implies $\abs{M\intersect P} = p^a$ for some $a\leq c$ by Lagrange
 
 We can then write
 \begin{align*}
 G = MP
 &\iff \abs{G} = \frac{\abs{M} \abs{P}}{\abs{M\intersect P}} \\ \\
-&\iff { \abs{G} \over \abs{M}} = {\abs{P}  \over \abs{M\intersect P}} = {p^c \over p^b} = p^{c-b}
+&\iff { \abs{G} \over \abs{M}} = {\abs{P}  \over \abs{M\intersect P}} = {p^c \over p^a} = p^{c-a} \definedas p^b
 \end{align*}
 
-where $b\leq c \implies 0 \leq c-b \leq c$
+where $a\leq c \implies 0 \leq c-b \leq c$ so $0\leq b \leq c$.
 
 ## 2 \label{problem:session_1_6_2_soln}
 
