/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’ + ‘Algebra/UGA Solutions/sections/figures/2019-12-24-13-19-15.png’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -321,7 +321,7 @@ But then $r\not\in \mathfrak{p}$, a contradiction.
 
 > The lattice: 
 
-![](2019-12-24-13-19-15.png)
+![](figures/2019-12-24-13-19-15.png)
 
 Let $K = \QQ(\zeta)$. 
 Then $K$ is the splitting field of $f(x) = x^n - 1$, which is irreducible over $\QQ$, so $K/\QQ$ is normal.
