/ ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -9,3 +9,18 @@ Suppose $f$ is analytic on $\Omega \supseteq \DD$ whose power series $\sum a_n z
 a. Give an example of an $f$ which converges at every point on $S^1$.
 b. Give an example of an $f$ which is analytic at $z=1$ but $\sum a_n$ diverges.
 c. Prove that $f$ can not be analytic at every point of $S^1$.
+
+
+Solution:
+
+a. Take $\sum {z^n \over n^2}$; then $\abs{z}\leq 1 \implies \abs{z^n\over n^2} \leq {1\over n^2}$ which is summable, so the series converges for $\abs{z}\leq 1$.
+
+b. Take $\sum {z^n \over n}$; then $z=1$ yields the harmonic series, which diverges.
+  For $z\in S^1\setminus\theset{1}$, we have $z = e^{2\pi it}$ for $0<t<2\pi$. 
+  So fix $t$.
+  
+  Toward applying the Dirichlet test, set $a_n = 1/n, b_n = z^n$.
+  Then 
+  \begin{align*}
+  \sum^N b_n = \sum^N z^n = {1 - z^{N+1} \over 1- z}
+  .\end{align*}
