/ ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -22,5 +22,9 @@ b. Take $\sum {z^n \over n}$; then $z=1$ yields the harmonic series, which diver
   Toward applying the Dirichlet test, set $a_n = 1/n, b_n = z^n$.
   Then 
   \begin{align*}
-  \sum^N b_n = \sum^N z^n = {1 - z^{N+1} \over 1- z}
+  \abs{\sum_{n=1}^N b_n}
+  = \abs{\sum_{n=1}^N b_n}
+  = \abs{\sum_{n=1}^N z^n}
+  = \abs{  {z-z^{N+1} \over 1 - z} } 
+  \leq {2 \over 1-z} < \infty
   .\end{align*}
