/ ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -20,7 +20,7 @@ b. Take $\sum {z^n \over n}$; then $z=1$ yields the harmonic series, which diver
   So fix $t$.
   
   Toward applying the Dirichlet test, set $a_n = 1/n, b_n = z^n$.
-  Then 
+  Then for all $N$,
   \begin{align*}
   \abs{\sum_{n=1}^N b_n}
   = \abs{\sum_{n=1}^N b_n}
@@ -28,3 +28,21 @@ b. Take $\sum {z^n \over n}$; then $z=1$ yields the harmonic series, which diver
   = \abs{  {z-z^{N+1} \over 1 - z} } 
   \leq {2 \over 1-z} < \infty
   .\end{align*}
+  Thus $\sum a_n b_n < \infty$ and $\sum z^n/n$ converges.
+
+c. ?
+
+
+### 5
+
+Prove the Fundamental Theorem of Algebra: every non-constant polynomial $p(z) = a_nz^n + \cdots + a_0 \in \CC[x]$ has a root in $\CC$.
+
+Solution:
+
+- Strategy: By contradiction with Liouville's Theorem
+- Suppose $p$ has no roots
+- Claim: $1/p(z)$ is a bounded holomorphic function
+  - Holomorphic: clear? Since $p$ has no roots.
+  - Bounded: write 
+  \begin{align*}
+  .\end{align*}  
