/ ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -41,8 +41,16 @@ Solution:
 
 - Strategy: By contradiction with Liouville's Theorem
 - Suppose $p$ has no roots
-- Claim: $1/p(z)$ is a bounded holomorphic function
-  - Holomorphic: clear? Since $p$ has no roots.
-  - Bounded: write 
+- Claim: $1/p(z)$ is a bounded holomorphic function on $\CC$.
+- Holomorphic: clear? Since $p$ has no roots.
+- Bounded: for $z\neq 0$, write
   \begin{align*}
-  .\end{align*}  
+  \frac{P(z)}{z^{n}}=a_{n}+\left(\frac{a_{n-1}}{z}+\cdots+\frac{a_{0}}{z^{n}}\right)
+  .\end{align*}
+
+- The term in parentheses goes to 0 as $\abs{z}\to \infty$
+- Thus there exists an $R>0$ such that
+\begin{align*}
+\abs{z} > R \implies \abs{P(z) \over z^n} \geq c \definedas {\abs{a_n} \over 2}
+.\end{align*}
+    
