/ ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -58,3 +58,15 @@ Solution:
   - Since $p$ is continuous and has no roots in $\abs{z} \leq R$, it is bounded below when $\abs{z} \leq R$.
   - Thus $p$ is bounded below on $\CC$ and thus $1/p$ is bounded above on $\CC$.
 - By Liouville's theorem, $1/p$ is constant and thus $p$ is constant, a contradiction.
+
+
+### 6
+
+Find all entire functions $f$ which satisfy the following inequality, and prove the list is complete:
+\begin{align*}
+\abs{f(z)} \geq z
+.\end{align*}
+
+Solution:
+
+Suppose $f$ is entire; then by the above inequality
