/ ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -69,4 +69,6 @@ Find all entire functions $f$ which satisfy the following inequality, and prove 
 
 Solution:
 
-Suppose $f$ is entire; then by the above inequality
+- Suppose $f$ is entire and define $g(z) \definedas {z \over f(z)}$.
+- By the inequality, $\abs{g(z)} \leq 1$, so $g$ is bounded.
+- $g$ potentially has singularities at the zeros $Z_f$, but since $f$ is entire, $g$ is holomorphic on $\CC\setminus Z_f$.
