/ ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -71,4 +71,13 @@ Solution:
 
 - Suppose $f$ is entire and define $g(z) \definedas {z \over f(z)}$.
 - By the inequality, $\abs{g(z)} \leq 1$, so $g$ is bounded.
-- $g$ potentially has singularities at the zeros $Z_f$, but since $f$ is entire, $g$ is holomorphic on $\CC\setminus Z_f$.
+- $g$ potentially has singularities at the zeros $Z_f \definedas f\inv(0)$, but since $f$ is entire, $g$ is holomorphic on $\CC\setminus Z_f$.
+- Claim: $Z_f \subset \CC$ is closed and discrete
+  - ???
+- Thus the singularities $Z_f$ are isolated
+- By Riemann's removable singularity theorem, the singularities $Z_f$ are removable and $g$ has an extension to an entire function $\tilde g$.
+- By continuity, we have $\abs{\tilde g(z)} \leq 1$ on all of $\CC$
+- By Liouville, $\tilde g$ is constant, so $\tilde g(z) = c_0$ with $\abs {c_0} \leq 1$
+- Thus $f(z) = c_o\inv z$
+
+Thus all such functions are of the form $f(z) = cz$ for some $c\neq 0\in \CC$.
