+ ‘Complex Analysis/UGA Solutions/Complex_Analysis_Qual_Solutions.md’ + ‘Complex Analysis/UGA Solutions/Complex_Analysis_Qual_Solutions.pdf’ / ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -16,19 +16,22 @@ Solution:
 a. Take $\sum {z^n \over n^2}$; then $\abs{z}\leq 1 \implies \abs{z^n\over n^2} \leq {1\over n^2}$ which is summable, so the series converges for $\abs{z}\leq 1$.
 
 b. Take $\sum {z^n \over n}$; then $z=1$ yields the harmonic series, which diverges.
-  For $z\in S^1\setminus\theset{1}$, we have $z = e^{2\pi it}$ for $0<t<2\pi$. 
-  So fix $t$.
   
-  Toward applying the Dirichlet test, set $a_n = 1/n, b_n = z^n$.
-  Then for all $N$,
-  \begin{align*}
-  \abs{\sum_{n=1}^N b_n}
-  = \abs{\sum_{n=1}^N b_n}
-  = \abs{\sum_{n=1}^N z^n}
-  = \abs{  {z-z^{N+1} \over 1 - z} } 
-  \leq {2 \over 1-z} < \infty
-  .\end{align*}
-  Thus $\sum a_n b_n < \infty$ and $\sum z^n/n$ converges.
+    - For $z\in S^1\setminus\theset{1}$, we have $z = e^{2\pi it}$ for $0<t<2\pi$. 
+    - So fix $t$.
+    
+    - Toward applying the Dirichlet test, set $a_n = 1/n, b_n = z^n$.
+    
+    - Then for all $N$,
+    \begin{align*}
+    \abs{\sum_{n=1}^N b_n}
+    = \abs{\sum_{n=1}^N b_n}
+    = \abs{\sum_{n=1}^N z^n}
+    = \abs{  {z-z^{N+1} \over \abs{1 - z}} } 
+    \leq {2 \over 1-z} < \infty
+    .\end{align*}
+    
+    - Thus $\sum a_n b_n < \infty$ and $\sum z^n/n$ converges.
 
 c. ?
 
