/ ‘Complex Analysis/UGA Solutions/Complex_Analysis_Qual_Solutions.pdf’ / ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -1,4 +1,16 @@
 # Week 1
+## Integrals and Cauchy's Theorem
+
+
+### 5
+
+Show that there is no sequence of polynomials converging uniformly to $f(z) = 1/z$ on $S^1$.
+
+Solution
+
+- By Cauchy's integral formula, $\int_{S^1} f = 2\pi i$
+- If $p_j$ is any polynomial, then $p_j$ is holomorphic in $\DD$, so $\int_{S^1} p_j = 0$.
+- ??? Contradiction
 
 ## Liouville. The Fundamental Theorem of Algebra, Power Series
 
