/ ‘Complex Analysis/UGA Solutions/Complex_Analysis_Qual_Solutions.pdf’ / ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -10,7 +10,10 @@ Solution
 
 - By Cauchy's integral formula, $\int_{S^1} f = 2\pi i$
 - If $p_j$ is any polynomial, then $p_j$ is holomorphic in $\DD$, so $\int_{S^1} p_j = 0$.
-- ??? Contradiction
+- Contradiction: compact sets in $\CC$ are bounded, so 
+\begin{align*}
+\abs{\int f - \int p_j} \leq \int \abs{p_j - f} \leq \int \norm{p_j - f}_\infty  = \norm{p_j - f}_\infty \int_{S^1} 1 \,dz = \norm{p_j-f}_\infty \cdot 2\pi \to 0
+.\end{align*}
 
 ## Liouville. The Fundamental Theorem of Algebra, Power Series
 
