--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -16,6 +16,17 @@ Solution
   \end{align*}
   which forces $\int f = \int p_j = 0$.
 
+### 10
+
+Suppose $f:\CC\to\CC$ is entire and bounded, and use Cauchy's theorem to prove that $f' \equiv 0$ and thus $f$ is constant.
+
+Solution
+
+- Suffices to prove $f' = 0$ because $\CC$ is connected (see Stein Ch 1, 3.4)
+- Fix $z_0\in \CC$, let $B$ be the bound for $f$, so $\abs{f(z)} \leq B$ for all $z$.
+- Apply Cauchy inequalities: $\abs{ f'(z_0) } \leq B/R$
+- Take $R\to \infty$, QED.
+
 ## Liouville. The Fundamental Theorem of Algebra, Power Series
 
 ### 1
