--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -24,7 +24,11 @@ Solution
 
 - Suffices to prove $f' = 0$ because $\CC$ is connected (see Stein Ch 1, 3.4)
 - Fix $z_0\in \CC$, let $B$ be the bound for $f$, so $\abs{f(z)} \leq B$ for all $z$.
-- Apply Cauchy inequalities: $\abs{ f'(z_0) } \leq B/R$
+- Apply Cauchy inequalities: if $f$ is holomorphic on $U\supset \bar D_R(z_0)$ then setting $\norm{f}_C \definedas \sup_{z\in C} \abs{f(z)}$,
+  \begin{align*}
+  \abs{f^{(n)} (z_0)} \leq {n! \norm{f}_C \over R^n}
+  .\end{align*}
+  - Yields $\abs{ f'(z_0) } \leq B/R$
 - Take $R\to \infty$, QED.
 
 ## Liouville. The Fundamental Theorem of Algebra, Power Series
