/ ‘Complex Analysis/Review Doc/sections/ExtraQuestions.md’ / ‘Complex Analysis/UGA Solutions/Complex_Analysis_Qual_Solutions.pdf’ / ‘Complex Analysis/UGA Solutions/sections/2020-06-16.md’

--- a/Complex Analysis/UGA Solutions/sections/2020-06-16.md
+++ b/Complex Analysis/UGA Solutions/sections/2020-06-16.md
@@ -23,6 +23,9 @@ Suppose $f:\CC\to\CC$ is entire and bounded, and use Cauchy's theorem to prove t
 Solution
 
 - Suffices to prove $f' = 0$ because $\CC$ is connected (see Stein Ch 1, 3.4)
+  - Idea: Fix $w_0$, show $f(w) = f(w_0)$ for any $w\neq w_0$
+  - Connected = Path connected in $\CC$, so take $\gamma$ joining $w$ to $w_0$.
+  - $f$ is a primitive for $f'$, and $\int_\gamma f' = f(w) - f(w_0)$, but $f'=0$.
 - Fix $z_0\in \CC$, let $B$ be the bound for $f$, so $\abs{f(z)} \leq B$ for all $z$.
 - Apply Cauchy inequalities: if $f$ is holomorphic on $U\supset \bar D_R(z_0)$ then setting $\norm{f}_C \definedas \sup_{z\in C} \abs{f(z)}$,
   \begin{align*}
