/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -274,7 +274,7 @@ Since $r$ is a zero divisor, there exists some $z\in R$ such that $rz = 0$.
 
 But then 
 $$
-yz = rxz = xrz = 0z2
+yz = rxz = xrz = x\cdot 0 = 0
 $$ 
 since $R$ is commutative, so $y$ is a zero divisor.
 
