/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -300,7 +300,7 @@ $$
 
 But then 
 $$
-\abs{R} = [R:K_i]\abs{K_i} \leq (n)(n) = n^2 < \infty
+\abs{R} = [R:K_i]\cdot \abs{K_i} \leq n\cdot n = n^2 < \infty
 .$$
 
 ### d
