/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -295,12 +295,12 @@ $$
 Now consider $R/K_i \definedas \theset{r + K_i}$.
 By the first isomorphism theorem, $R/K_i \cong \im \phi$, and by (b) every element in the image is a zero divisor, so 
 $$
-[R: K_i] = \abs{R/K_i} = \abs{\im \phi_i} \leq n < \infty
+[R: K_i] = \abs{R/K_i} = \abs{\im \phi_i} \leq n 
 .$$
 
 But then 
 $$
-\abs{R} = [R:K_i]\cdot \abs{K_i} \leq n\cdot n = n^2 < \infty
+\abs{R} = [R:K_i]\cdot \abs{K_i} \leq n\cdot n = n^2 
 .$$
 
 ### d
