/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/2019 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/2019 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/2019 Fall.md
@@ -8,10 +8,10 @@
 
 Prove a stronger result: 
 $$
-a_n \to A \implies \frac 1 N \sum^N a_k \to A
+a_n \to S \implies \frac 1 N \sum^N a_k \to S
 .$$
 
-> Idea: once $N$ is large enough, $a_k \approx A$, and all smaller terms will die off as $N\to \infty$.
+> Idea: once $N$ is large enough, $a_k \approx S$, and all smaller terms will die off as $N\to \infty$.
 >
 > See [this MSE answer](https://math.stackexchange.com/questions/514802/convergence-of-series-implies-convergence-of-cesaro-mean).
 
