/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/2019 Fall.md’ + ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’

--- a/Real Analysis/UGA Solutions/sections/2019 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/2019 Fall.md
@@ -8,17 +8,17 @@
 
 Prove a stronger result: 
 $$
-a_n \to S \implies \frac 1 N \sum^N a_k \to S
+a_n \to S \implies S_N\definedas \frac 1 N \sum_{k=1}^N a_k \to S
 .$$
 
 > Idea: once $N$ is large enough, $a_k \approx S$, and all smaller terms will die off as $N\to \infty$.
 >
 > See [this MSE answer](https://math.stackexchange.com/questions/514802/convergence-of-series-implies-convergence-of-cesaro-mean).
 
-Suppose $S_k \to S$.
+Suppose $S_N \to S$.
 Choose $\ell$ large enough such that 
 $$
-k\geq \ell \implies \abs{S_k - S} < \varepsilon
+N\geq \ell \implies \abs{S_N - S} < \varepsilon
 .$$
 
 With $\ell$ fixed, choose $N$ large enough such that
