/ ‘Algebra/Review Doc/Algebra_Qual_Notes.md’ / ‘Algebra/Review Doc/Algebra_Qual_Notes.pdf’ + ‘Algebra/Review Doc/Extra Algebra Qual Questions.pdf’ / ‘Algebra/Review Doc/sections/40_Modules.md’ + ‘Algebra/Review Doc/sections/50_Linear Algebra.md’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.md’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.pdf’ < ‘Algebra/UGA Questions/sections/2020 Spring.md’ > ‘Algebra/UGA Questions/sections/01_2020 Spring.md’ < ‘Algebra/UGA Questions/sections/2019 Fall.md’ > ‘Algebra/UGA Questions/sections/02_2019 Fall.md’ < ‘Algebra/UGA Questions/sections/2019_Exam_Questions.md’ > ‘Algebra/UGA Questions/sections/02_Fall_2019_Exam_Questions.md’ < ‘Algebra/UGA Questions/sections/2019 Spring.md’ > ‘Algebra/UGA Questions/sections/03_2019 Spring.md’ < ‘Algebra/UGA Questions/sections/2018 Fall.md’ > ‘Algebra/UGA Questions/sections/04_2018 Fall.md’ < ‘Algebra/UGA Questions/sections/2018 Spring.md’ > ‘Algebra/UGA Questions/sections/05_2018 Spring.md’ < ‘Algebra/UGA Questions/sections/2017 Fall.md’ > ‘Algebra/UGA Questions/sections/06_2017 Fall.md’ < ‘Algebra/UGA Questions/sections/2017 Spring.md’ > ‘Algebra/UGA Questions/sections/07_2017 Spring.md’ < ‘Algebra/UGA Questions/sections/2016 Fall.md’ > ‘Algebra/UGA Questions/sections/08_2016 Fall.md’ < ‘Algebra/UGA Questions/sections/2016 Spring.md’ > ‘Algebra/UGA Questions/sections/09_2016 Spring.md’ < ‘Algebra/UGA Questions/sections/2015 Fall.md’ > ‘Algebra/UGA Questions/sections/10_2015 Fall.md’ < ‘Algebra/UGA Questions/sections/2015 Spring.md’ > ‘Algebra/UGA Questions/sections/11_2015 Spring.md’ < ‘Algebra/UGA Questions/sections/2014 Fall.md’ > ‘Algebra/UGA Questions/sections/12_2014 Fall.md’ < ‘Algebra/UGA Questions/sections/2014 Spring.md’ > ‘Algebra/UGA Questions/sections/13_2014 Spring.md’ < ‘Algebra/UGA Questions/sections/2013 Fall.md’ > ‘Algebra/UGA Questions/sections/14_2013 Fall.md’ < ‘Algebra/UGA Questions/sections/2013 Spring.md’ > ‘Algebra/UGA Questions/sections/15_2013 Spring.md’ 

--- a/Algebra/UGA Questions/sections/01_2020 Spring.md
+++ b/Algebra/UGA Questions/sections/01_2020 Spring.md
@@ -51,7 +51,7 @@ c. Prove that if $F$ is a free module, then any short exact sequence of $R\dash$
 
 d. Let $R$ be a PID. 
   Show that any finitely generated $R\dash$module $M$ can be expressed as a direct sum of a torsion module and a free module.
-  You may assume that a finitely generated torsion module over a PID is free.
+  You may assume that a finitely generated torsionfree module over a PID is free.
 
 ## 7
 
