--- a/Real Analysis/UGA Questions/sections/02_2019 Fall.md
+++ b/Real Analysis/UGA Questions/sections/02_2019 Fall.md
@@ -3,7 +3,7 @@
 ## 1. 
 Let $\{a_n\}_{n=1}^\infty$ be a sequence of real numbers.
 
-a. Prove that if $\displaystyle\lim_{n→∞} a_n = 0$, then $\displaystyle\lim_{n→∞} a_1 + \cdots + a_n = 0$.
+a. Prove that if $\displaystyle\lim_{n→∞} a_n = 0$, then 
 $$
 \lim _{n \rightarrow \infty} \frac{a_{1}+\cdots+a_{n}}{n}=0
 $$
