--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -412,32 +412,64 @@ Then
 
 Let $A$ be the matrix in the question, and $B$ be the matrix containing 1's in every entry.
 
-Noting that $B = A+I$, we have
+- Noting that $B = A+I$, we have
+  \begin{align*}
+  &B\vector x = \lambda \vector x \\
+  &\iff (A+I) \vector x = \lambda \vector x \\
+  &\iff A \vector x = (\lambda - 1) \vector x
+  ,\end{align*}
+    so we will find the eigenvalues of $B$ and subtract one from each.
+
+- Note that $B\vector v = \thevector{\sum v_i, \sum v_i, \cdots, \sum v_i}$, i.e. it has the effect of summing all of the entries of $\vector v$ and placing that sum in each component.
+
+- We proceed by finding $p$ eigenvectors and eigenvalues, since the JCF and minimal polynomials will involve eigenvalues and the transformation matrix will involve (generalized) eigenvectors.
+
+- Claim: each vector of the form $\vector p_i \definedas \vector e_1 - \vector e_{i+1} = \thevector{1, 0, 0,\cdots, 0 -1, 0, \cdots, 0 }$ where $i\neq j$ is also an eigenvector with eigenvalues $\lambda_0 = 0$, and this gives $p-1$ linearly independent vectors spanning the eigenspace $E_{\lambda_0}$
+  - Compute $$B \vector p_i = \thevector{ 1 + 0 + \cdots + 0 + (-1) + 0 + \cdots + 0} = \thevector{0, 0, \cdots, 0}$$
+  - So every $\vector p_i \in \ker(B)$, so they are eigenvectors with eigenvalue 0.
+  - Since the first component is fixed and we have $p-1$ choices for where to place a $-1$, this yields $p-1$ possibilities for $\vector p_i$
+  - These are linearly independent since the $(p-1)\times (p-1)$ matrix $\thevector{ \vector p_1^t, \cdots, \vector p_{p-1}^t}$ satisfies
+  \begin{align*}
+  \det 
+\begin{bmatrix}
+1 & 1 & 1 & \cdots & 1\\
+-1 & 0  & 0 & \cdots & 0\\
+0 & -1  & 0 & \cdots & 0\\
+0 & 0 & -1 & \cdots & 0\\
+\vdots & \vdots  & \vdots & \ddots & \vdots \\
+0 & 0  & 0 & \cdots & -1\\
+\end{bmatrix}
+= (1) \cdot \det 
+\begin{bmatrix}
+-1 & 0  & 0 & \cdots & 0\\
+0 & -1  & 0 & \cdots & 0\\
+0 & 0 & -1 & \cdots & 0\\
+\vdots & \vdots  & \vdots & \ddots & \vdots \\
+0 & 0  & 0 & \cdots & -1\\
+\end{bmatrix}
+ = (-1)^{p-2} \neq 0
+.\end{align*}
+
+  where the first equality follows from expanding along the first row and noting this is the first minor, and every other minor contains a row of zeros.
+
+- Claim: $\vector v_1 = \thevector{1, 1, \cdots, 1}$ is an eigenvector with eigenvalue $\lambda_1 = p$.
+  - Compute $$B\vector v = \thevector{\sum_{i=1}^p 1, \sum_{i=1}^p 1, \cdots, \sum_{i=1}^p 1} = \thevector{p, p, \cdots, p} = p \thevector{1, 1, \cdots, 1} = p\vector{v}_1,$$ thus $\lambda_1 = p$
+  - $\dim E_{\lambda_1} = 1$ since the eigenspaces are orthogonal and $E_{\lambda_0} \oplus E_{\lambda_1} \leq F^p$ is a subspace, so $p > \dim(E_{\lambda_0}) + \dim E_{\lambda_1} = p-1 + \dim E_{\lambda_1}$ and it isn't zero dimensional.
+
+
+- Using that the eigenvalues of $A$ are $1+\lambda_i$ for $\lambda_i$ the above eigenvalues for $B$,
 \begin{align*}
-&B\vector x = \lambda \vector x \\
-&\iff (A+I) \vector x = \lambda \vector x \\
-&\iff A \vector x = (\lambda - 1) \vector x
-,\end{align*}
-
-so it suffices to find the eigenvalues of $B$.
-
-The vector $\vector v_1 = \sum \vector e_i$ (the vector of all 1's) is an eigenvector with eigenvalue $\lambda = p$ and $\dim E_{\lambda = p} = 1$.
-
-Similarly, any vector of the form $\vector p_i \definedas \vector e_1 - \vector e_{i+1}$ where $i\neq j$ is also an eigenvector with eigenvalues $\lambda = 0$.
-This supplies the remaining $p-1$ possibilities.
-Note that this also supplies $p-1$ linearly independent vectors that span the corresponding eigenspace, so $\dim E_{\lambda = 0} = p-1$.
-
-So
-\begin{align*}
-\spec(B) &= \theset{(\lambda_1 = p, m_1 = 1), (\lambda_2 = 0, m_2 = p-1)} \\
-\implies \spec(A) &= \theset{(\lambda_1 = p-1, m_1 = 1), (\lambda_2 = -1, m_2 = p-1)} \\
-&\implies \chi_{A, \QQ}(x) = (x - (p-1))(x - (-1))^{p-1}
+\spec(B) \definedas \theset{(\lambda_i, m_i)} &=  \theset{(p, 1), (0, p-1)}  \implies \chi_{B}(x) = (x-p)x^{p-1} \\ 
+\implies \spec(A) &= \theset{(p-1,1), (-1, p-1) }  \implies \chi_{A}(x) = (x- p+1)(x+1)^{p-1} \\
 \end{align*}
 
-and geometric multiplicities are preserved, so
+> Note: we can always read off the *characteristic* polynomial from the spectrum.
+
+
+- The dimensions of eigenspaces are preserved, thus
 \begin{align*}
 JCF_\QQ(A)
-=  J_{\lambda = p-1}^{1} \oplus (p-1)J_{\lambda = -1}^1
+=  J_{p-1}^{1} \oplus (p-1)J_{-1}^1
 =
 \left[\begin{array}{r|r|r|r|r|r}
 p-1 & 0 & 0 & \cdots & 0 & 0 \\
@@ -450,8 +482,8 @@ p-1 & 0 & 0 & \cdots & 0 & 0 \\
 \end{array}\right]
 .\end{align*}
 
-The matrix $P$ such that $A = PJP\inv$ will have columns the bases of the generalized eigenspaces.
-In this case, the generalized eigenspaces are the usual eigenspaces, so
+- The matrix $P$ such that $A = PJP\inv$ will have columns the bases of the generalized eigenspaces.
+- In this case, the generalized eigenspaces are the usual eigenspaces, so
 \begin{align*}
 P = [\vector v_1, \vector p_1, \cdots, \vector p_{p-1}] =
 \left[\begin{array}{rrrrrr}
@@ -466,16 +498,24 @@ P = [\vector v_1, \vector p_1, \cdots, \vector p_{p-1}] =
 
 ### b
 
-For $F = \FF_p$, all eigenvalues/vectors still lie in $\FF_p$, but now $-1 = p-1$, $\chi_{A, \FF_p}(x) = (x+1)^p$, and the Jordan blocks may merge.
+For $F = \FF_p$, all eigenvalues/vectors still lie in $\FF_p$, but now $-1 = p-1$, making $(x-(p-1))(x+1)^{p-1} = (x+1)(x+1)^{p-1}$, so $\chi_{A, \FF_p}(x) = (x+1)^p$, and the Jordan blocks may merge.
 
-But a computation shows that $(A+I)^2 = pA = 0 \in M_p(\FF_p)$ and $(A+I) \neq 0$, so $\min_{A, \FF_p}(x) = (x+1)^2$.
+- A computation shows that $(A+I)^2 = pA = 0 \in M_p(\FF_p)$ and $(A+I) \neq 0$, so $\min_{A, \FF_p}(x) = (x+1)^2$.
+  - Thus the largest Jordan block corresponding to $\lambda = -1$ is of size 2
+- Can check that $\det(A) = \pm 1 \in \FF_p\units$, so the vectors $\vector e_1 - \vector e_i$ are still linearly independent and thus $\dim E_{-1} = p-1$
+  - So there are $p-1$ Jordan blocks for $\lambda = 0$.
 
-So the largest Jordan block corresponding to $\lambda = 0$ is of size 2, and we can check that $\dim E_{\lambda = 0} = \dim \theset{\vector e_i - \vector e_j \suchthat i\neq j} = p-1$, so there are $p-1$ Jordan blocks for $\lambda = 0$.
+Summary:
+\begin{align*}
+\min_{A, \FF_p}(x) &= (x+1)^2 \\
+\chi_{A, \FF_p}(x) &\equiv (x+1)^p \\
+\dim E_{-1} &= p-1
+.\end{align*}
 
 Thus
 \begin{align*}
 JCF_{\FF_p}(A)
-=  J_{\lambda = -1}^{2} \oplus (p-2)J_{\lambda = -1}^1
+=  J_{-1}^{2} \oplus (p-2)J_{-1}^1
 = \left[\begin{array}{rr|r|r|r|r}
 -1 & 1 & 0 & \cdots & 0 & 0 \\
 0& -1 & 0 & 0 & 0 & 0 \\
@@ -515,33 +555,45 @@ P = [\vector v_1, \vector x, \vector p_1, \cdots, \vector p_{p-2}] =
 
 ## 8
 
-> - Galois theory.
-> - $\deg \Phi_n(x) = \phi(n)$
-> - $\Gal(\QQ(\zeta)/\QQ) \cong \ZZ/(n)\units$
+Concepts used:
+
+- $\zeta_n \definedas e^{2\pi i \over n}$, and $\zeta_n^k$ is a primitive $n$th root of unity $\iff \gcd(n, k) = 1$
+  - In general, $\zeta_n^k$ is a primitive ${n \over \gcd(n, k)}$th root of unity.
+- $\deg \Phi_n(x) = \phi(n)$
+- $\phi(p^k) = p^k - p^{k-1} = p^{k-1}(p-1)$ (proof: for a nontrivial gcd, the possibilities are $p, 2p, 3p, 4p, \cdots, p^{k-2}p, p^{k-1}p$.)
+- $\Gal(\QQ(\zeta)/\QQ) \cong \ZZ/(n)\units$
 
 Let $K = \QQ(\zeta)$
 
 ### a
-Note that $\zeta$ is a primitive 8th root of unity, so we are looking for the degree of $\Phi_8$, the 8th cyclotomic polynomial, which is $\phi(8) = \phi(2^3) = 2^2(1) = 4$.
 
-So $[K: \QQ] = 4$.
+- $\zeta \definedas e^{2\pi i / 8}$ is a primitive $8$th root of unity
+- The minimal polynomial of an $n$th root of unity is the $n$th cyclotomic polynomial $\Phi_n$
+- The degree of the field extension is the degree of $\Phi_8$, which is
+\begin{align*}
+\phi(8) = \phi(2^3) = 2^{3-1} \cdot (2-1) = 4
+.\end{align*}
+- So $[\QQ(\zeta): \QQ] = 4$.
 
 ### b
-We have $\Gal(K/\QQ) \cong \ZZ/(8)\units \cong \ZZ/(4)$, which is exactly one subgroup of index 2.
-Thus there is exactly **one** intermediate field of degree 2.
+- $\Gal(\QQ(\zeta)/\QQ) \cong \ZZ/(8)\units \cong \ZZ/(4)$ by general theory 
+- $\ZZ/(4)$ has exactly one subgroup of index 2.
+- Thus there is exactly **one** intermediate field of degree 2 (a quadratic extension).
 
 ### c
-Let $L = \QQ(\zeta, \sqrt[4] 2)$.
+- Let $L = \QQ(\zeta, \sqrt[4] 2)$.
 
-We can use the fact that $K = \QQ(i, \sqrt 2)$ and thus $L = \QQ(i, \sqrt 2, \sqrt[4] 2)$.
+- Note $\QQ(\zeta) = \QQ(i, \sqrt 2)$
+  - $\QQ(i, \sqrt{2})\subseteq \QQ(\zeta)$
+    - $\zeta_8^2 = i$, and $\zeta_8 = \sqrt{2}\inv + i\sqrt{2}\inv$ so $\zeta_8 + \zeta_8 \inv = 2/\sqrt{2} = \sqrt{2}$.
+  - $\QQ(\zeta) \subseteq \QQ(i, \sqrt{2})$: 
+    - $\zeta = e^{2\pi i / 8} = \sin(\pi/4) + i\cos(\pi/4) = {\sqrt 2 \over 2}\qty{1+i}$.
 
-> *Proof:* $\zeta_8^2 = i$, and $\zeta_8 = \sqrt{2}\inv + i\sqrt{2}\inv$ so $\zeta_8 + \zeta_8 \inv = 2/\sqrt{2} = \sqrt{2}$.
+- Thus $L = \QQ(i, \sqrt{2})(\sqrt[4]{2}) = \QQ(i, \sqrt 2, \sqrt[4] 2) = \QQ(i, \sqrt[4]{2})$.
+  - Uses the fact that $\QQ(\sqrt 2) \subseteq \QQ(\sqrt[4] 2)$ since $\sqrt[4]{2}^2 = \sqrt{2}$ 
 
-We can also use the fact that $\QQ(\sqrt 2) \subseteq \QQ(\sqrt[4] 2)$, and so $L = \QQ(i, \sqrt[4] 2)$.
-
-But then
+- Conclude
 \begin{align*}
 [L: \QQ] = [L: \QQ(\sqrt[4] 2)] ~[\QQ(\sqrt[4] 2): \QQ] = 2 \cdot 4 = 8
-.\end{align*}
-
-> Here we use the fact that the minimal polynomial of $i$ over any subfield of $\RR$ is always $x^2 + 1$.
+\end{align*}
+  using the fact that the minimal polynomial of $i$ over any subfield of $\RR$ is always $x^2 + 1$, so $\min_{\QQ(\sqrt[4] 2)}(i) = x^2 + 1$ which is degree 2.
