/ ‘Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -8,6 +8,14 @@ Let $f$ be the characteristic polynomial of $T$.
 
 $\implies$:
 
-- Suppose $f$ is irreducible in $\FF[x]$.
+- Suppose $f \definedas \chi_{V, T}(x)$ is irreducible in $\FF[x]$.
+- Suppose $W< V$ is proper and nonzero
+- Since $T(W)\subseteq W$, the restriction $g\definedas \chi_{V, T}(x) \mid_W: W\to W$ is a linear operator on $W$.
+- Claim: $g$ divides $f$ in $\FF[x]$.
+- This yields a contradiction, since $f$ was assumed irreducible.
+
+$\impliedby$
+
+- ?
 
 ### b
