/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -8,12 +8,10 @@ Let $f$ be the characteristic polynomial of $T$.
 
 $\implies$:
 
-- By contrapositive
-- Suppose $f \definedas \chi_{V, T}(x)$ is irreducible in $\FF[x]$.
-- Suppose $W< V$ is proper and nonzero
+- By contrapositive, suppose there is a proper nonzero invariant subspace $W<V$ with $T(W) \subseteq W$, we will show the characteristic polynomial $f \definedas \chi_{V, T}(x)$ is reducible.
 - Since $T(W)\subseteq W$, the restriction $g\definedas \chi_{V, T}(x) \mid_W: W\to W$ is a linear operator on $W$.
 - Claim: $g$ divides $f$ in $\FF[x]$.
-- This yields a contradiction, since $f$ was assumed irreducible.
+- Thus $f$ is reducible.
 
 $\impliedby$
 
