/ ‘Algebra/UGA Questions/sections/15_2013 Spring.md’

--- a/Algebra/UGA Questions/sections/15_2013 Spring.md
+++ b/Algebra/UGA Questions/sections/15_2013 Spring.md
@@ -52,7 +52,7 @@ b. Give all of the possible Jordan canonical forms of $T$.
 ## 6
 Let $V$ be a finite dimensional vector space over a field $F$ and let $T: V\to V$ be a linear operator with characteristic polynomial $f(x) \in F[x]$.
 
-a. Show that $f(x)$ is irreducible in $F[x] \iff$ there are no proper nonzero subspace $W< V$ with $T(W) \subseteq W$.
+a. Show that $f(x)$ is irreducible in $F[x] \iff$ there are no proper nonzero subspaces $W< V$ with $T(W) \subseteq W$.
 
 b. If $f(x)$ is irreducible in $F[x]$ and the characteristic of $F$ is 0, show that $T$ is diagonalizable when we extend the field to its algebraic closure.
 
