--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -10,7 +10,7 @@ $\implies$:
 
 - By contrapositive, suppose there is a proper nonzero invariant subspace $W<V$ with $T(W) \subseteq W$, we will show the characteristic polynomial $f \definedas \chi_{V, T}(x)$ is reducible.
 - Since $T(W)\subseteq W$, the restriction $g\definedas \chi_{V, T}(x) \mid_W: W\to W$ is a linear operator on $W$.
-- Claim: $g$ divides $f$ in $\FF[x]$.
+- Claim: $g$ divides $f$ in $\FF[x]$ and $\deg(g) < \deg(f)$.
 - Thus $f$ is reducible.
 
 $\impliedby$
