/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -11,6 +11,9 @@ $\implies$:
 - By contrapositive, suppose there is a proper nonzero invariant subspace $W<V$ with $T(W) \subseteq W$, we will show the characteristic polynomial $f \definedas \chi_{V, T}(x)$ is reducible.
 - Since $T(W)\subseteq W$, the restriction $g\definedas \chi_{V, T}(x) \mid_W: W\to W$ is a linear operator on $W$.
 - Claim: $g$ divides $f$ in $\FF[x]$ and $\deg(g) < \deg(f)$.
+  - Matrix-dependent proof:
+    - Choose an ordered basis for $W$, say $\mcb_W = \theset{\vector e_1, \cdots, \vector e_k}$ where $k=\dim_F(W)$
+    - Claim: this can be extended to a basis of $V$, say $\theset{\vector e_1, \cdots, \vector e_k, \vector f_1, \cdots, \vector f_j}$ where $k+j = \dim_F(V)$.
 - Thus $f$ is reducible.
 
 $\impliedby$
