--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -12,8 +12,10 @@ $\implies$:
 - Since $T(W)\subseteq W$, the restriction $g\definedas \chi_{V, T}(x) \mid_W: W\to W$ is a linear operator on $W$.
 - Claim: $g$ divides $f$ in $\FF[x]$ and $\deg(g) < \deg(f)$.
   - Matrix-dependent proof:
-    - Choose an ordered basis for $W$, say $\mcb_W = \theset{\vector e_1, \cdots, \vector e_k}$ where $k=\dim_F(W)$
-    - Claim: this can be extended to a basis of $V$, say $\theset{\vector e_1, \cdots, \vector e_k, \vector f_1, \cdots, \vector f_j}$ where $k+j = \dim_F(V)$.
+    - Choose an ordered basis for $W$, say $\mcb_W \definedas \theset{\vector w_1, \cdots, \vector w_k}$ where $k=\dim_F(W)$
+    - Claim: this can be extended to a basis of $V$, say $\mcb_V \definedas \theset{\vector w_1, \cdots, \vector w_k, \vector v_1, \cdots, \vector v_j}$ where $k+j = \dim_F(V)$.
+    - Restrict $T$ to $W$ to get $T_W$, then let $B = [T_W]_{\mcb_W}$ be the matrix representation of $T_W$ with respect to $\mcb_W$.
+    - Now 
 - Thus $f$ is reducible.
 
 $\impliedby$
