/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -10,12 +10,24 @@ $\implies$:
 
 - By contrapositive, suppose there is a proper nonzero invariant subspace $W<V$ with $T(W) \subseteq W$, we will show the characteristic polynomial $f \definedas \chi_{V, T}(x)$ is reducible.
 - Since $T(W)\subseteq W$, the restriction $g\definedas \chi_{V, T}(x) \mid_W: W\to W$ is a linear operator on $W$.
-- Claim: $g$ divides $f$ in $\FF[x]$ and $\deg(g) < \deg(f)$.
+- Claim: $g$ divides $f$ in $\FF[-]$ and $\deg(g) < \deg(f)$.
   - Matrix-dependent proof:
     - Choose an ordered basis for $W$, say $\mcb_W \definedas \theset{\vector w_1, \cdots, \vector w_k}$ where $k=\dim_F(W)$
     - Claim: this can be extended to a basis of $V$, say $\mcb_V \definedas \theset{\vector w_1, \cdots, \vector w_k, \vector v_1, \cdots, \vector v_j}$ where $k+j = \dim_F(V)$.
     - Restrict $T$ to $W$ to get $T_W$, then let $B = [T_W]_{\mcb_W}$ be the matrix representation of $T_W$ with respect to $\mcb_W$.
-    - Now 
+    - Now consider the matrix representation $[T]_{\mcb_V}$, in block form this is given by
+    \begin{align*}
+    [T]_{\mcb_V} = 
+    \begin{bmatrix}
+    B & C \\
+    0 & D
+    \end{bmatrix}
+    .\end{align*}
+    \todo{Why?}
+    - Now expand along the first column block to obtain
+    \begin{align*}
+    \chi_{T, V}(x) \definedas \det([T]_{\mcb_V} - xI) = \det(B - xI)\cdot \det(D - xI) \definedas \chi_{T, W}(x) \cdot \det(D-xI)
+    .\end{align*}
 - Thus $f$ is reducible.
 
 $\impliedby$
