/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -43,5 +43,6 @@ $\impliedby$
 - Let $\min_{T, F}(x)$ be the minimal polynomial of $T$ and $\chi_{T, F}(x)$ be its characteristic polynomial.
 - By Cayley-Hamilton, $\min_{T, F}(x)$ divides $\chi_{T, F}$
 - Since $\chi_{T, F}$ is irreducible, these polynomials are equal.
-- Replace $F$ with its algebraic closure.
 - Claim: $T/F$ is diagonalizable $\iff \min_{T, F}$ splits over $F$ and is squarefree.
+- Replace $F$ with its algebraic closure, then $\min_{T, F}$ splits.
+- Claim: $\min_{T, F}$ is squarefree.
